updated methodology for choosing what links to keep in the split routes.
Now I will move these changes over to the TransitRouteTrimmer